Resolve background color contrast

--- a/new/style.css
+++ b/new/style.css
@@ -1,5 +1,5 @@
 html {
-    background-color: #242529;
+    background-color: #191919;
     width: 100vw;
     height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
